# cppnow-2018-runtime-polymorphism

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  pictures.pptx
code/: functions.cpp  inheritance.cpp  joined_vtable.cpp  joined_vtable.dyno.cpp  local_storage.cpp  local_storage.dyno.cpp  local_vtable.cpp  local_vtable.dyno.cpp  non_owning_storage.cpp  non_owning_storage.dyno.cpp  remote_storage.cpp  remote_storage.dyno.cpp  sbo_storage.cpp  sbo_storage.dyno.cpp  shared_remote_storage.cpp  shared_remote_storage.dyno.cow.cpp  shared_remote_storage.dyno.cpp  vtable.dyno.cow.hpp  vtable.dyno.hpp  vtable.hpp
code/dependencies/: CMakeLists.txt  install.sh
